[package]
name = "rete"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
edition = "2018"
description = "An implementation of the rete rule matching algorithm"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
console_error_panic_hook = { version = "0.1", optional = true }
erased-serde = { version = "0.3.9", optional = true }
petgraph = "0.4.13"
serde = { version = "1", features = ["derive"], optional = true }
serde_json = { version = "1.0.39", optional = true }
slog = { version = "2.4.1", features = ["max_level_trace", "nested-values"] }
slog-stdlog = "3.0.2"
wasm-bindgen = { version = "0.2.45", optional = true }

[dev-dependencies]
color-backtrace = "0.1"
env_logger = "0.6.1"
slog-term = "2.4.0"

[features]
default = []
trace = ["erased-serde", "serde"]
wasm = ["console_error_panic_hook", "serde_json", "wasm-bindgen"]
