[package]
name = "rete"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
edition = "2018"
description = "An implementation of the rete rule matching algorithm"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
erased-serde = { version = "0.3.9", optional = true }
petgraph = "0.5.0"
serde = { version = "1", features = ["derive"], optional = true }
slog = { version = "2.4.1", features = ["max_level_trace", "nested-values"] }
slog-stdlog = "4.0.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde_json = "1.0.39"
wasm-bindgen = "=0.2.69"

[dev-dependencies]
color-backtrace = "0.5"
env_logger = "0.7.1"
slog-term = "2.4.0"

[features]
default = []
trace = ["erased-serde", "serde"]
