[package]
name = "rete"
version = "0.1.0"
authors = ["Anthony Deschamps <anthony.j.deschamps@gmail.com>"]
edition = "2018"
description = "An implementation of the rete rule matching algorithm"

[lib]
crate-type = ["rlib", "cdylib"]

[dependencies]
petgraph = "0.6"
serde = { version = "1", features = ["derive"], optional = true }
tracing = "0.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1"
serde_json = "1.0"
wasm-bindgen = "0.2"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = []
trace = ["serde"]
